syntax = "proto3";

package app.api.v1;

option go_package = "app/api/v1;v1";
option java_multiple_files = true;
option java_package = "app.api.v1";

service AppService {
  rpc GetData (GetDataRequest) returns (GetDataReply) {}
}

message Data {
  int64 id = 1;
  string data = 2;
}

message GetDataRequest {
  int64 id = 1;
}

message GetDataReply {
  Data data = 1;
}